--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.6.3
+  firebase_auth: ^4.16.0 
+  firebase_storage: ^11.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_fonts:
-  flutter_bloc:
+  google_fonts: ^6.2.1
+  flutter_bloc: ^8.1.4
   bloc: ^8.1.4
-  firebase_core:
-  cloud_firestore:
-  firebase_analytics:
-  flutter_svg: ^2.0.10+1
-  intl:
-  file_picker:
+  intl: ^0.19.0
+  firebase_core_web: ^2.10.0
+  file_picker: ^8.1.1
+  
+  
+  
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: 4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
