--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.24.2
-  cloud_firestore: ^4.6.3
+  cloud_firestore: ^4.14.0
   firebase_auth: ^4.16.0 
   firebase_storage: ^11.6.0
 
@@ -44,6 +44,9 @@ dependencies:
   intl: ^0.19.0
   firebase_core_web: ^2.10.0
   file_picker: ^8.1.1
+  firebase_database: ^10.4.0
+  phone_number_text_input_formatter: ^0.0.2
+  intl_phone_number_input: ^0.7.4
   
   
   
