--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   firebase_database: ^10.4.0
   phone_number_text_input_formatter: ^0.0.2
   intl_phone_number_input: ^0.7.4
+  shimmer: ^3.0.0
+  pdf: ^3.6.0
+  printing: ^5.6.0
+  path_provider: ^2.0.5
+  share_plus: ^3.0.4
+  
   
   
   
